# Gitwise

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt
gitwise/: cli.py  config.py
gitwise/core/: branding.py  chunker.py  cloner.py  indexer.py  llm.py  retriever.py
gitwise/graph/: chat_graph.py  state.py
gitwise/memory/: checkpointer.py
