[project]
name = "gitwise"
version = "0.1.0"
description = "Chat with any GitHub repo in plain English."
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "groq>=0.11.0",
]

[project.scripts]
gitwise = "gitwise.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gitwise*"]
