[project]
name = "gitwise"
version = "0.1.0"
description = "Chat with any GitHub repo in plain English."
requires-python = ">=3.10"
ddependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "groq>=0.11.0",
    "pyfiglet>=1.0.2",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "rank_bm25>=0.2.2",
]

[project.scripts]
gitwise = "gitwise.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gitwise*"]
